# ch-COVID-Certificate-Verifier

./: CMakeLists.txt  README.md
include/: base45.h  ch.h  pubkeys.h  testdata.h
include/t_cose/: t_cose_sign1_verify.h
res/: get_trustlist.py
res/openssl/: Makefile  configdata.pm  libcrypto.so.1.1  libssl.so.1.1
res/openssl/apps/: openssl
res/openssl/crypto/: buildinf.h
res/openssl/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
res/openssl/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_bio  buildtest_c_cms  buildtest_c_conf  buildtest_c_crypto  buildtest_c_ct  buildtest_c_lhash  buildtest_c_ocsp  buildtest_c_opensslv  buildtest_c_pkcs12  buildtest_c_pkcs7  buildtest_c_rand_drbg  buildtest_c_safestack  buildtest_c_srp  buildtest_c_ssl  buildtest_c_ui  buildtest_c_x509  buildtest_c_x509_vfy  buildtest_c_x509v3  casttest  chacha_internal_test  cipherbytes_test  cipherlist_test  (+91 more)
res/t_cose/: Makefile.ossl  TAGS  mk
res/t_cose/crypto_adapters/: t_cose_openssl_crypto.c
res/t_cose/src/: t_cose_sign1_verify.c
src/: ch.cpp  test_ch.cpp
